--- a/src/assets/stylesheets/all.css
+++ b/src/assets/stylesheets/all.css
@@ -158,7 +158,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   position: fixed;
   top: 0;
   left: 0;
-  mix-blend-mode: hard-light;
+  mix-blend-mode: difference;
   z-index: 99999;
   opacity: 0;
   pointer-events: none;
