--- a/src/assets/stylesheets/helpers/components/_cursor.scss
+++ b/src/assets/stylesheets/helpers/components/_cursor.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  mix-blend-mode: hard-light;
+  mix-blend-mode: difference;
   z-index: 99999;
   opacity: 0;
   pointer-events: none;
